# flow

./: DOCUMENTATION.md  iPhone voice memo file for testing.m4a  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_import.rs  audio_recorder.rs  lib.rs  main.rs  transcription.rs  whisper_model.rs
src/hooks/: useAudioImport.ts  useVoiceRecording.ts  useWhisperModel.ts
