[package]
name = "flow"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5.0"
regex = "1"

# Audio recording
cpal = "0.15"
hound = "3.5"

# Whisper transcription
whisper-rs = "0.12"

# Audio format conversion
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4"] }

# Async & utilities
tokio = { version = "1", features = ["sync"] }
once_cell = "1.19"
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"

# Tauri plugins
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"

